src/objects/Apttus_Config2__BillingPreference__c.object
<CustomObject>
    <description>Represents a functional preference for billing purposes</description>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the billing preference is active. Inactive preferences are not available for new associations.</description>
        <inlineHelpText>Indicates whether the billing preference is active. Inactive preferences are not available for new associations.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AllowPaymentTermOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether payment term may be overridden at lower levels</description>
        <inlineHelpText>Indicates whether payment term may be overridden at lower levels</inlineHelpText>
        <label>Allow Payment Term Override ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AllowPrefOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether preference may be overridden at lower levels</description>
        <inlineHelpText>Indicates whether preference may be overridden at lower levels</inlineHelpText>
        <label>Allow Preference Override ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingCycleStart__c</fullName>
        <description>Indicates when the billing cycle should start</description>
        <inlineHelpText>Indicates when the billing cycle should start</inlineHelpText>
        <label>Billing Cycle Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing Day of Month</fullName>
                </value>
                <value>
                    <fullName>Ready for Billing Date</fullName>
                    <default>true</default>
                    <label>Ready for Billing Date</label>
                </value>
                <value>
                    <fullName>Period Start Date</fullName>
                </value>
                <value>
                    <fullName>Order Date</fullName>
                </value>
                <value>
                    <fullName>Account Billing Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingDayOfMonth2__c</fullName>
        <description>The billing day of month. Specific Day of Month, End of Month, etc</description>
        <inlineHelpText>The billing day of month. Specific Day of Month, End of Month, etc</inlineHelpText>
        <label>Billing Day Of Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st of the Month</fullName>
                    <default>true</default>
                    <label>1st of the Month</label>
                </value>
                <value>
                    <fullName>2nd of the Month</fullName>
                </value>
                <value>
                    <fullName>3rd of the Month</fullName>
                </value>
                <value>
                    <fullName>4th of the Month</fullName>
                </value>
                <value>
                    <fullName>5th of the Month</fullName>
                </value>
                <value>
                    <fullName>6th of the Month</fullName>
                </value>
                <value>
                    <fullName>7th of the Month</fullName>
                </value>
                <value>
                    <fullName>8th of the Month</fullName>
                </value>
                <value>
                    <fullName>9th of the Month</fullName>
                </value>
                <value>
                    <fullName>10th of the Month</fullName>
                </value>
                <value>
                    <fullName>11th of the Month</fullName>
                </value>
                <value>
                    <fullName>12th of the Month</fullName>
                </value>
                <value>
                    <fullName>13th of the Month</fullName>
                </value>
                <value>
                    <fullName>14th of the Month</fullName>
                </value>
                <value>
                    <fullName>15th of the Month</fullName>
                </value>
                <value>
                    <fullName>16th of the Month</fullName>
                </value>
                <value>
                    <fullName>17th of the Month</fullName>
                </value>
                <value>
                    <fullName>18th of the Month</fullName>
                </value>
                <value>
                    <fullName>19th of the Month</fullName>
                </value>
                <value>
                    <fullName>20th of the Month</fullName>
                </value>
                <value>
                    <fullName>21st of the Month</fullName>
                </value>
                <value>
                    <fullName>22nd of the Month</fullName>
                </value>
                <value>
                    <fullName>23rd of the Month</fullName>
                </value>
                <value>
                    <fullName>24th of the Month</fullName>
                </value>
                <value>
                    <fullName>25th of the Month</fullName>
                </value>
                <value>
                    <fullName>26th of the Month</fullName>
                </value>
                <value>
                    <fullName>27th of the Month</fullName>
                </value>
                <value>
                    <fullName>28th of the Month</fullName>
                </value>
                <value>
                    <fullName>29th of the Month</fullName>
                </value>
                <value>
                    <fullName>30th of the Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingInterval__c</fullName>
        <description>The billing interval</description>
        <inlineHelpText>The billing interval</inlineHelpText>
        <label>Billing Interval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anytime</fullName>
                    <default>true</default>
                    <label>Anytime</label>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CalendarCycleStart__c</fullName>
        <description>Indicates which calendar month the billing cycle will align to</description>
        <inlineHelpText>Indicates which calendar month the billing cycle will align to</inlineHelpText>
        <label>Calendar Cycle Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Calendar Cycle Start</fullName>
                </value>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the preference is a default for the organization.</description>
        <inlineHelpText>Indicates whether the preference is a default for the organization.</inlineHelpText>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DoNotCreateInformational__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Suppresses the creation of all informational billing schedules</description>
        <inlineHelpText>Suppresses the creation of all informational billing schedules</inlineHelpText>
        <label>Do Not Create Informational</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideInformational__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Suppresses the creation of all informational billing schedules</description>
        <inlineHelpText>Suppresses the creation of all informational billing schedules</inlineHelpText>
        <label>Hide Informational</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InvoiceDeliveryMethod__c</fullName>
        <description>The invoice delivery preference</description>
        <inlineHelpText>The invoice delivery preference</inlineHelpText>
        <label>Invoice Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                    <default>true</default>
                    <label>Email</label>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>3rd party</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InvoiceOutputFormat__c</fullName>
        <description>The invoice output format.</description>
        <inlineHelpText>The invoice output format.</inlineHelpText>
        <label>Invoice Output Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PDF</fullName>
                    <default>true</default>
                    <label>PDF</label>
                </value>
                <value>
                    <fullName>DOC</fullName>
                </value>
                <value>
                    <fullName>DOCX</fullName>
                </value>
                <value>
                    <fullName>RTF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PrefLevel__c</fullName>
        <description>The level associated with the billing preference</description>
        <inlineHelpText>The level associated with the billing preference</inlineHelpText>
        <label>Preference Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Organization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProrationPeriodTreatment__c</fullName>
        <description>The proration period treatment method. This is to deal with the time between when the service period starts and the ready for billing day.</description>
        <inlineHelpText>The proration period treatment method. This is to deal with the time between when the service period starts and the ready for billing day.</inlineHelpText>
        <label>Proration Period Treatment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ignore</fullName>
                </value>
                <value>
                    <fullName>Separate Period</fullName>
                    <default>true</default>
                    <label>Separate Period</label>
                </value>
                <value>
                    <fullName>Combine with First Period</fullName>
                </value>
                <value>
                    <fullName>Spread over Remaining Period</fullName>
                </value>
                <value>
                    <fullName>Extend Period</fullName>
                </value>
                <value>
                    <fullName>Charge Full</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxLevel__c</fullName>
        <description>The default tax level</description>
        <inlineHelpText>The default tax level</inlineHelpText>
        <label>Tax Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                    <default>true</default>
                    <label>Account</label>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ProposalId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal</description>
        <inlineHelpText>ID of the associated quote/proposal</inlineHelpText>
        <label>Quote/Proposal (DEPRECATED)</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Billing Preferences</relationshipLabel>
        <relationshipName>BillingPreferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ProposalLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal line item</description>
        <inlineHelpText>ID of the associated quote/proposal line item</inlineHelpText>
        <label>Quote Line Item (DEPRECATED)</label>
        <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>Billing Preferences</relationshipLabel>
        <relationshipName>BillingPreferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Billing Preference</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Preference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>